metadata/objects/Field__c.object
<CustomObject>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picklist_Values__c</fullName>
        <label>Picklist Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
                <value>
                    <fullName>Textarea</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Datetime</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Int</fullName>
                </value>
                <value>
                    <fullName>Double</fullName>
                </value>
                <value>
                    <fullName>Url</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WebToObject__c</fullName>
        <label>WebToObject</label>
        <referenceTo>WebToObject__c</referenceTo>
        <relationshipLabel>Fields</relationshipLabel>
        <relationshipName>ObjectField</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Field</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>